fix actions bar wrapping when not out of room

--- a/client/css/less/components/header.less
+++ b/client/css/less/components/header.less
@@ -37,7 +37,6 @@ header {
     float: left;
     margin: 0;
     padding: 8px 0;
-    width: 50%;
     list-style: none;
 
     li {
